--- a/Project01/.vscode/settings.json
+++ b/Project01/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.exclude": {
-        "./node_modules" : true,
-        "./package-lock.json" : true
+        "**/node_modules": true,
+        "**/.vscode" : true,
+        "**/.eslintrc.cjs" : true,
     }
 }
